# DevMatch-EcoChain

./: .env.example  .gitignore  Cargo.toml  README.md  SUI_TECHNICAL_DOCUMENTATION.md  TODO.md  index.html  package-lock.json  package.json  rofl.yaml  tailwind.config.js  test-blockchain-integration.js
config/: contracts.json
contracts/: EnvironmentalOracle.sol  Move.toml  README.md
contracts/sources/: ai_agent.move  sensor_auth.move  sensor_reputation.move  simple_sensor.move
ethereum/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
ethereum/contracts/: DataCredit.sol  EcoChainLiquidityManager.sol  EcoChainStaking.sol  EcoChainToken.sol  EnvironmentalMarket.sol  OracleBridge.sol
ethereum/scripts/: check-balance.ts  debug-env.ts  deploy-oracle.ts  deploy-tokenomics.ts  deploy.ts  test-deploy.ts  test-environmental-data.ts
src/: App.tsx  main.rs
src/components/: AIAgentChat.tsx  BlockchainDataHub.tsx  BlockchainManagement.tsx  BlockchainStatus.tsx  Dashboard.tsx  DataGeneration.tsx  DataVisualization.tsx  ErrorBoundary.tsx  Header.tsx  LoadingSpinner.tsx  LoginModal.tsx  OnChainRecords.tsx  OracleBridge.tsx  PredictionMarket.tsx  SensorVerification.tsx  SensorVerification.tsx.new  SubgraphIntegration.tsx  UserProfile.tsx  Verification.tsx  Verification.tsx.new
src/config/: auth.ts
src/hooks/: useAuth.tsx  useEnvironmentalData.ts  useSubgraph.ts
src/services/: aiService.ts  blockchain.ts  (+2 more)
subgraph/: DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  schema.graphql  subgraph.yaml  tsconfig.json
(+3 files in other folders)
