[package]
name = "ecochain-rofl-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for environmental oracle
anyhow = "1.0"
async-trait = "0.1.77"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
ethabi = { version = "18.0.0", default-features = false, features = ["std"] }
dotenv = "0.15"
